--- a/mystyle.css
+++ b/mystyle.css
@@ -1,4 +1,4 @@
-div.logo
+.logo
 {
 	position:fixed;
 	top:0px;
@@ -6,7 +6,6 @@ div.logo
 	height:50px;
 	padding:5px;
 	margin-left:200px;
-	
 }
 .header
 {
@@ -20,23 +19,57 @@ div.logo
 .menu
 {
 	padding:5px;
-	padding-left:12px;
-	padding-right:12px;
+	padding-left:13px;
+	padding-right:13px;
 	height:20px;
 	text-align:center;
 	color:#197260;
 	float:left;
-	text-outline:5px;
+	font-size:15px;
 }
-.apa
+.login
 {
-	position:fixed;
-	overflow:hidden;
-	top:0px;
-	left:0px;
-	height:100%;
-	width:100%;
-	background-color:#000000;
-	opacity:0.7;
-	z-index:105;
+	margin-top:500px;
+	margin-left:200px;
+}
+.page
+{
+	margin-top:50px;
+	margin-left:200px;
+	margin-right:200px;
+	background-color:#99feea;
+	height:800px;
+	box-shadow: 10px 10px 5px #888888;
+}
+.pagelogin
+{
+	margin-top:50px;
+	margin-left:200px;
+	margin-right:200px;
+	background-color:#99feea;
+	box-shadow: 10px 10px 5px #888888;
+}
+.all
+{
+	background-color:#f6f6f6;
+	font-family:Arial,Helvetica,sans-serif;
+}
+.formlogin
+{
+	margin-left:200px;
+	margin-right:200px;
+	height:200px;
+	padding-top:50px;
+	text-align:right;
+	color:#197260;
+	font-size:12px;
+}
+.formregis
+{
+	margin-left:50px;
+	margin-right:570px;
+	padding-top:50px;
+	text-align:right;
+	color:#197260;
+	font-size:12px;
 }
